syntax = "proto3";

package pb;

option go_package = "github.com/valkyraycho/bank/pb";

import "user.proto";

service BankService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){};
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){};
}

